# homelab

./: .gitignore  AGENTS.md  Caddyfile  README.md  compose.yaml  homelab_cli.py  pyproject.toml  renovate.json
.github/workflows/: renovate.yml
ansible/: ansible.cfg  requirements.yml
ansible/inventories/lab/: hosts.yml
ansible/inventories/lab/group_vars/: all.yml
ansible/playbooks/: cluster.yml  penzance.yml  proxmox.yml  site.yml
ansible/roles/cilium/tasks/: main.yml
ansible/roles/cilium/templates/: cilium-l2.yaml.j2
ansible/roles/cluster_bootstrap/tasks/: main.yml
ansible/roles/common/tasks/: main.yml
ansible/roles/flux/tasks/: main.yml
docs/: dns-naming.md  penzance-inventory.md  proxmox-setup.md  secrets-workflow.md
flux/apps/base/: cilium-certificates.yaml  gitea.yaml  isambard-sealedsecret.yaml  isambard.yaml  jellyfin-pvc.yaml  jellyfin.yaml  kustomization.yaml  media-vpn.yaml  pihole-ingress.yaml  syncthing.yaml  vaultwarden.yaml
flux/clusters/homelab/: apps.yaml  certificates.yaml  infrastructure.yaml  secrets.yaml
flux/infrastructure/base/: cert-manager.yaml  cloudflared.yaml  external-secrets.yaml  kustomization.yaml  namespaces.yaml  sealed-secrets.yaml
flux/infrastructure/certificates/: clusterissuer.yaml
flux/infrastructure/secrets/: cloudflared-tunnel.yaml  cluster-secret-store.yaml  kustomization.yaml
scripts/: homelab  init-homelab-pass.sh  render-secrets.sh
terraform/: .terraform.lock.hcl  cloudflare.tf  locals.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars  terraform.tfvars.example  variables.tf  versions.tf
(+18 files in other folders)
