[project]
name = "homelab"
version = "0.1.0"
description = "Homelab automation CLI"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1",
  "PyYAML>=6.0",
]

[project.scripts]
homelab = "homelab_cli:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["homelab_cli"]
